--- a/code/css/main.css
+++ b/code/css/main.css
@@ -17,7 +17,7 @@ body {
     cursor: pointer;
   }
   
-  #traffic-light {
+  #traffic-light-yn,#traffic-light-ys,#traffic-light-xe,#traffic-light-xw {
     height: 550px;
     width: 200px;
     float: left;
@@ -25,6 +25,10 @@ body {
     border-radius: 40px;
     margin: 30px 0;
     padding: 20px;
+  }
+
+  .clear {
+    clear: both;
   }
   
   .bulb {
