--- a/code/css/main.css
+++ b/code/css/main.css
@@ -47,3 +47,22 @@ body {
     margin: 2.5px auto;
     transition: background 500ms;
   }
+  .grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+  }
+  .grid-item-inside {
+    background-color: rgba(0, 0, 0, 1);
+    border: 1px solid rgba(255, 255, y, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
+  .grid-item-outside {
+    background-color: green;
+    border: 1px solid rgba(255, 255, y, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
